Created PUT /user/{user_id} which updates a user with an email value so they no longer will be anonymous to admins. Created pop-up modal to prompt users in HomePage.
